--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     <title>You don't know js</title>
+    <script defer src="./script.js"></script>
 </head>
 <body>
 <h1>Вы не знаете JS (серия книг)</h1>
